--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Blood Bank</title>
     <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css"
         integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="Assets/css/slick-1.8.1/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="Assets/css/slick-1.8.1/slick/slick-theme.css" />
+    <link rel="stylesheet" type="text/css" href="Assets/css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="Assets/css/slick-theme.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
         integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
@@ -77,10 +77,10 @@
                             <a class="nav-link" href="articles.html">المقالات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="donationsOrders.html">طلبات التبرع</a>
+                            <a class="nav-link" href="donations.html">طلبات التبرع</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="whoAreWe.html">من نحن</a>
+                            <a class="nav-link" href="about.html">من نحن</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="callUs.html">اتصل بنا</a>
@@ -459,10 +459,10 @@
                             <a href="articles.html">
                                 <li>المقالات</li>
                             </a>
-                            <a href="donationsOrders.html">
+                            <a href="donations.html">
                                 <li>طلبات التبرع</li>
                             </a>
-                            <a href="whoAreWe.html">
+                            <a href="about.html">
                                 <li>من نحن</li>
                             </a>
                             <a href="callUs.html">
@@ -519,7 +519,7 @@
     <script src="https://cdn.rtlcss.com/bootstrap/v4.2.1/js/bootstrap.min.js"
         integrity="sha384-a9xOd0rz8w0J8zqj1qJic7GPFfyMfoiuDjC9rqXlVOcGO/dmRqzMn34gZYDTel8k"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="Assets/css/slick-1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="Assets/js/slick.min.js"></script>
     <script type="text/javascript" src="Assets/js/javaScript.js"></script>
 </body>
 
